# D0018E_Lab

./: README.md  pyproject.toml
src/database/: adminQueries.py  userQueries.py
src/frontend/: Mysql.py  Warsaystyle.css  about.html  checkout.html  comments.php  config.php  contact.html  createaccount.html  createaccout.html  design.html  index.html  login.html  new.html  package.json  placeorder.html  shoppingbasket.html  store.js  style.css  tempCodeRunnerFile.py  test.html  testing.py
src/frontend2/website/: __init__.py  auth.py
src/frontend2/website/templates/: chair.html  home.html  login.html  signup.html  style02.css
